--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-minify",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Plugin for minifying your html, js and css",
   "cordova": {
     "id": "cordova-plugin-minify",
@@ -27,6 +27,7 @@
   "author": "EyeSeeT",
   "license": "MIT",
   "dependencies": {
+    "clean-css": "^4.2.3",
 	"terser": "^5.2.1"
   },
   "bugs": {
