--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-minify",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Plugin for minifying your html, js and css",
   "cordova": {
     "id": "cordova-plugin-minify",
@@ -33,5 +33,5 @@
   "bugs": {
     "url": "https://github.com/eyeseet/cordova-plugin-minify/issues"
   },
-  "homepage": "https://github.com/eyeseet/cordova-plugin-minify#readme"
+  "homepage": "https://eyeseet.nl/cordova-plugin-minify/"
 }
