--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "css",
     "ecosystem:cordova"
   ],
-  "author": "EyeSeeT",
+  "author": "Content & Creations",
   "license": "MIT",
   "dependencies": {
     "clean-css": "^4.2.3",
