--- a/package.json
+++ b/package.json
@@ -33,5 +33,5 @@
   "bugs": {
     "url": "https://github.com/eyeseet/cordova-plugin-minify/issues"
   },
-  "homepage": "https://eyeseet.nl/cordova-plugin-minify/"
+  "homepage": "https://contentandcreations.nl"
 }
